Fixed text input zoom issue on iOS

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1099,6 +1099,22 @@ canvas {
 }
 
 @media (max-width: 900px) and (pointer: coarse) {
+  input[type="text"],
+  input[type="search"],
+  input[type="email"],
+  input[type="number"],
+  input[type="tel"],
+  input[type="url"],
+  input[type="password"],
+  textarea,
+  select,
+  .nh3d-name-input,
+  .nh3d-text-input,
+  .nh3d-startup-config-input,
+  .nh3d-startup-config-select {
+    font-size: 16px;
+  }
+
   .nh3d-canvas-root,
   .nh3d-canvas-root canvas {
     touch-action: none;
